<resources>
    <string name="app_name">Trabajo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Joan Emmanuel Cruz Lopez</string>
    <string name="nav_header_subtitle_descripcion">Ingeniero de Software Especialista python</string>
    <string name="nav_header_subtitle">emmanuel2005.al@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Perfil</string>
    <string name="menu_gallery">Fotos</string>
    <string name="menu_slideshow">Video</string>
    <string name="menu_web">Web</string>


    <string name="menu_titulo">Joan Emmanuel Cruz López</string>
    <string name="menu_info_general">Ingeniero de Software con experiencia en
                                        Python, desarrollo de aplicaciones web,
                                        Machine Learning y visualización de datos.
                                        Instructor de Python Pro, formando a futuros
                                        profesionales a nivel internacional. Proactivo,
                                        disciplinado y enfocado en soluciones
                                        innovadoras.</string>

    <string name="menu_experiencia">Experiencia</string>

    <string name="menu_description_experiencia1">Instructor de Python Pro en Kodland, empresa
        educativa internacional. Enseño desarrollo web con
        Flask e introducción a inteligencia artificial.
        Contribuyo a inspirar y preparar a las nuevas
        generaciones para el futuro digital.
    </string>

    <string name="menu_description_experiencia2">Python y desarrollo web: Experiencia en
        programación orientada a objetos y creación de
        aplicaciones web con Flask y Django, integrando
        bases de datos como MySQL y PostgreSQL.
    </string>

    <string name="menu_description_experiencia3">Análisis, visualización de datos y machine learning:
        Competencia en el análisis, procesamiento y
        representación gráfica de datos, además de
        conocimientos en machine learning utilizando
        herramientas avanzadas de Python.
    </string>
</resources>