<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DED9D9"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FDFDFD"
        tools:context=".ui.home.HomeFragment"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="181dp"
            android:layout_height="69dp"
            android:background="#F4EFEF"
            android:text="@string/menu_titulo"
            android:textColor="#312C2C"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.879"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteY="464dp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="369dp"
            android:layout_height="180dp"
            android:layout_marginTop="24dp"
            android:background="#EDECE8"
            android:text="@string/menu_info_general"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView3" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="205dp"
            android:layout_height="207dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/mia"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="142dp"
            android:layout_height="44dp"
            android:layout_marginTop="36dp"
            android:background="#E7E2E2"
            android:text="@string/menu_experiencia"
            android:textColor="#070707"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.164"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="361dp"
            android:layout_height="95dp"
            android:layout_marginTop="40dp"
            android:background="#E4E1E1"
            android:text="@string/menu_description_experiencia1"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="378dp"
            android:layout_height="128dp"
            android:layout_marginTop="40dp"
            android:background="#E4E1E1"
            android:text="@string/menu_description_experiencia2"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.513"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="383dp"
            android:layout_height="147dp"
            android:layout_marginTop="36dp"
            android:background="#E4E1E1"
            android:text="@string/menu_description_experiencia3"
            android:textColor="#000000"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView8"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
